# Motor-Modeller-App

./: .gitignore  CMakeLists.txt  Main.qml  Offset.qml  README.md  datahandler.cpp  datahandler.h  main.cpp  serialreciever.cpp  serialreciever.h
